# Data_Glow_Up_26

./: README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
api/app/: main.py
api/app/database/: database.py  tables.py
api/app/routers/: closed_deals.py  customers.py  geolaction.py  marketing_qualified_leads.py  order_items.py  order_payments.py  order_reviews.py  orders.py  product_category_name_translation.py  products.py  sellers.py
app/: main.py
app/database/: database.py  models.py
app/routers/: closed_deals.py  customers.py  geolaction.py  marketing_qualified_leads.py  order_items.py  order_payments.py  order_reviews.py  orders.py  product_category_name_translation.py  products.py  schemas.py  sellers.py
src/: main.py
src/abstraction/: data_load.py
src/database/: models.py  tables.py
src/load/: tables.py  tables_spark.py
src/load/schemas/: customers_schema.py
tests/: test_closed_deals_endpoint.py  test_customers_endpoint.py  test_db.py  test_geolocation_endpoint.py  test_marketing_qualified_leads.py  test_order_items_endpoint.py  test_order_payments_endpoint.py  test_order_reviews_endpoint.py  test_orders_endpoint.py  test_product_category_name_translation.py  test_products.py  test_sellers.py
