[tool.poetry]
name = "desafio-26-heitor-sasaki"
version = "0.1.0"
description = ""
authors = ["Guilherme Machado <gui.mp8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
